@startuml

    !include ../lexakai/lexakai.theme
    
    title "com.telenav.aonia.map.data.formats.pbf.model.identifiers"
    
    abstract BaseStringConverter
    
    interface PbfIdentifierType
    interface Factory
    
    BaseStringConverter <|-- PbfNodeIdentifier.Converter
    class PbfNodeIdentifier.Converter
    {
        --(constructors)--
        +Converter(Listener)
    }
    
    BaseStringConverter <|-- PbfRelationIdentifier.Converter
    class PbfRelationIdentifier.Converter
    {
        --(constructors)--
        +Converter(Listener)
    }
    
    BaseStringConverter <|-- PbfWayIdentifier.Converter
    class PbfWayIdentifier.Converter
    {
        --(constructors)--
        +Converter(Listener)
    }
    
    Factory <|-- PbfNodeIdentifier.Factory
    class PbfNodeIdentifier.Factory
    {
    }
    
    interface PbfIdentifierType
    {
        --
        +EntityType entityType()
        --(collection)--
        +MapIdentifier forIdentifierAndType(MapIdentifier.Type, long identifier)
        +MapIdentifier forIdentifierAndType(long identifierAndType)
        +MapIdentifier newIdentifier(long identifier)
        +MapIdentifier.Type type()
        +MapIdentifier withType(MapIdentifier, MapIdentifier.Type)
        +MapIdentifier withType()
        +MapIdentifier withoutType()
        --(primitive)--
        +long asLong()
    }
    
    MapNodeIdentifier <|-- PbfNodeIdentifier
    PbfIdentifierType <|-- PbfNodeIdentifier
    class PbfNodeIdentifier
    {
        --(constructors)--
        +PbfNodeIdentifier(PbfNode)
        +PbfNodeIdentifier(WayNode)
        +PbfNodeIdentifier(long)
        --(checks)--
        +boolean isSynthetic()
        +boolean isSynthetic(long identifier)
        --(identity)--
        +PbfNodeIdentifier forLong(long identifier)
        +MapNodeIdentifier nextSyntheticNodeIdentifier()
        +PbfNodeIdentifier parse(String)
    }
    
    MapRelationIdentifier <|-- PbfRelationIdentifier
    PbfIdentifierType <|-- PbfRelationIdentifier
    class PbfRelationIdentifier
    {
        --(constructors)--
        +PbfRelationIdentifier(PbfRelation)
        +PbfRelationIdentifier(long)
        --(command line parsing)--
        +SwitchParser.Builder<PbfRelationIdentifier> switchParser(String name, String description)
        --(identity)--
        +MapRelationIdentifier forLong(long identifier)
        +PbfRelationIdentifier forRelation(Relation)
    }
    
    MapWayIdentifier <|-- PbfWayIdentifier
    PbfIdentifierType <|-- PbfWayIdentifier
    class PbfWayIdentifier
    {
        --(constructors)--
        +PbfWayIdentifier(PbfWay)
        +PbfWayIdentifier(long)
        --(command line parsing)--
        +SwitchParser.Builder<PbfWayIdentifier> switchParser(String name, String description)
        --(identity)--
        +MapWayIdentifier forLong(long identifier)
        +PbfWayIdentifier forWay(Way)
        +PbfWayIdentifier parse(String)
    }
    
@enduml

